# python_dojo_01

./: Makefile  README.md  US.md  main.py  pyproject.toml  pyrightconfig.json  server.py
build_pdf/: Containerfile  build_image.sh  build_pdf.sh  gen_pdf.py
pokemon/: __init__.py  card_renderer.py  exception.py  player.py  pokemon.py
pokemon/ext_api/: tyradex.py
pokemon/tests/: fake_pokemons.json  fakes.py  test_ext_api.py  test_player.py  test_pokemons.py
slides/: index.html  python-dojo-01.html
slides/templates/: python-dojo-01.html
