[project]
name = "python-dojo-01"
version = "0.1.0"
description = "Python dojo to learn python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32.3"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32.0.20250328",
]
